2007-05-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_highlight_and_shade),
	(clearlooks_draw_spinbutton), (clearlooks_draw_frame),
	(clearlooks_draw_separator), (clearlooks_draw_list_view_header),
	(clearlooks_draw_statusbar), (clearlooks_draw_resize_grip):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_list_view_header):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_shadow):
	Use ge_cairo_set_color where possible (we still need to update
	cairo_set_source_rgba)

2007-05-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	Less shadows on prelight... ok thos? :)

2007-05-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Reverted back, update to 696 if you want shadows... we will think

2007-05-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	(22:48:08) thos: Cimi, it is difficult when I am doing 100 things at once :)
	Thos is not multitasking :D
	(AKA useless commit to show shadows on buttons)

2007-05-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	Is it correct as I've added a left inner shadow?
	Benzea please take a look ;)

2007-05-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button),
	(clearlooks_glossy_draw_progressbar_trough):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Added comments /* code */ to try buttons with a shadow instead the inset
