@@ -1,5 +1,12 @@
 2007-05-08  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_shadow), (clearlooks_style_draw_box_gap),
+	(clearlooks_style_draw_shadow_gap):
+	Rounded frames and notebook :)
+
+2007-05-08  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* engines/clearlooks/src/clearlooks_draw.c:
 	(clearlooks_draw_highlight_and_shade),
 	(clearlooks_draw_spinbutton), (clearlooks_draw_frame),
